# jsonrpc-cpp-lib

./: .bazelrc  .clang-format  .clang-tidy  .clangd  .gitignore  BUILD.bazel  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  MODULE.bazel  README.md  conanfile.py
.github/workflows/: ci.yml
cmake/: jsonrpc-cpp-lib.pc.in  jsonrpc.pc.in
examples/: BUILD.bazel  CMakeLists.txt
examples/calculator_example/: calculator.hpp
examples/calculator_example/framed_pipe/: client.cpp  server.cpp
examples/calculator_example/framed_socket/: client.cpp  server.cpp
examples/calculator_example/pipe/: client.cpp  server.cpp
examples/calculator_example/socket/: client.cpp  server.cpp
examples/calculator_example/stdio/: client.cpp  server.cpp
examples/lsp_example/: utils.hpp
examples/lsp_example/client/: .gitignore  package-lock.json  package.json
examples/lsp_example/client/src/: extension.ts
examples/lsp_example/pipe/: lsp_server.cpp
examples/lsp_example/server/: lsp_server.cpp
examples/lsp_example/socket/: lsp_server.cpp
examples/typed_calculator_example/: client.cpp  server.cpp  typed_calculator.hpp
include/jsonrpc/client/: client.hpp
include/jsonrpc/endpoint/: dispatcher.hpp  endpoint.hpp  id_generator.hpp  json_trait.hpp  jsonrpc_traits.hpp  pending_request.hpp  request.hpp  response.hpp  task_executor.hpp  typed_handlers.hpp  types.hpp
include/jsonrpc/error/: error.hpp
include/jsonrpc/server/: server.hpp
include/jsonrpc/transport/: framed_pipe_transport.hpp  framed_transport.hpp  message_framer.hpp  pipe_transport.hpp  socket_transport.hpp  stdio_transport.hpp  transport.hpp
src/: BUILD.bazel
src/client/: client.cpp
src/endpoint/: dispatcher.cpp  endpoint.cpp  request.cpp  response.cpp
src/server/: server.cpp
src/transport/: framed_pipe_transport.cpp  framed_transport.cpp  pipe_transport.cpp  socket_transport.cpp  stdio_transport.cpp
tests/: BUILD.bazel  CMakeLists.txt
tests/client/: test_client.cpp
tests/common/: mock_transport.hpp  test_utils.hpp
tests/endpoint/: dispatcher_test.cpp  endpoint_test.cpp  request_test.cpp  response_test.cpp  test_dispatcher.cpp  test_endpoint.cpp  test_request.cpp  test_response.cpp
tests/server/: test_server.cpp
tests/transports/: framed_pipe_transport_test.cpp  message_framer_test.cpp  pipe_transport_test.cpp  test_framed_pipe_transport.cpp  test_framed_transport.cpp  test_message_framer.cpp  test_pipe_transport.cpp
