cc_library(
    name = "jsonrpc",
    srcs = glob(["src/**/*.cpp"]),
    hdrs = glob(["include/jsonrpc/**/*.hpp"]),
    copts = ["-Wno-unused-parameter"],
    includes = ["include"],
    linkopts = ["-pthread"],
    visibility = ["//visibility:public"],
    deps = [
        "@asio",
        "@nlohmann_json//:json",
        "@spdlog",
    ],
)
