"""
MODULE.bazel file for the jsonrpc module
"""

module(
    name = "jsonrpc_cpp_lib",
    version = "2.0.0",
)

# Dependencies from the Bazel Central Registry
bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "nlohmann_json", version = "3.11.3")
bazel_dep(name = "spdlog", version = "1.14.1")
bazel_dep(name = "asio", version = "1.28.2")
bazel_dep(name = "catch2", version = "3.6.0")

# Dependency using traditional HTTP archive
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "bazel_clang_tidy",
    urls = ["https://github.com/erenon/bazel_clang_tidy/archive/43bef6852a433f3b2a6b001daecc8bc91d791b92.zip"],
    strip_prefix = "bazel_clang_tidy-43bef6852a433f3b2a6b001daecc8bc91d791b92",
    sha256 = "ebc23027a2e42035b6797235f6bb1400ddeb7a439c9dda1caa0fa7a06fd615e3",
)

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "1e08f8e0507b6b6b1f4416a9a22cf5c28beaba93",
)
