# examples/BUILD.bazel

# Calculator example using Unix domain socket (pipe) transport
cc_binary(
    name = "pipe_client",
    srcs = ["calculator_example/pipe/client.cpp"],
    deps = ["//src:jsonrpc_lib"],
)

cc_binary(
    name = "pipe_server",
    srcs = [
        "calculator_example/calculator.hpp",
        "calculator_example/pipe/server.cpp",
    ],
    deps = ["//src:jsonrpc_lib"],
)

# Calculator example using Framed Unix domain socket transport
cc_binary(
    name = "framed_pipe_client",
    srcs = ["calculator_example/framed_pipe/client.cpp"],
    deps = ["//src:jsonrpc_lib"],
)

cc_binary(
    name = "framed_pipe_server",
    srcs = [
        "calculator_example/calculator.hpp",
        "calculator_example/framed_pipe/server.cpp",
    ],
    deps = ["//src:jsonrpc_lib"],
)

# Calculator example using ASIO socket transport
cc_binary(
    name = "socket_client",
    srcs = ["calculator_example/socket/client.cpp"],
    deps = ["//src:jsonrpc_lib"],
)

cc_binary(
    name = "socket_server",
    srcs = [
        "calculator_example/calculator.hpp",
        "calculator_example/socket/server.cpp",
    ],
    deps = ["//src:jsonrpc_lib"],
)

# LSP example using Unix domain socket (pipe) transport
cc_binary(
    name = "pipe_lsp_server",
    srcs = [
        "lsp_example/server/lsp_server.cpp",
    ],
    deps = ["//src:jsonrpc_lib"],
)
