# examples/BUILD.bazel

# Calculator example using Unix domain socket (pipe) transport
cc_binary(
    name = "pipe_client",
    srcs = ["calculator_example/pipe/client.cpp"],
    deps = ["//:jsonrpc"],
)

cc_binary(
    name = "pipe_server",
    srcs = [
        "calculator_example/calculator.hpp",
        "calculator_example/pipe/server.cpp",
    ],
    deps = ["//:jsonrpc"],
)

# Calculator example using Framed Unix domain socket transport
cc_binary(
    name = "framed_pipe_client",
    srcs = ["calculator_example/framed_pipe/client.cpp"],
    deps = ["//:jsonrpc"],
)

cc_binary(
    name = "framed_pipe_server",
    srcs = [
        "calculator_example/calculator.hpp",
        "calculator_example/framed_pipe/server.cpp",
    ],
    deps = ["//:jsonrpc"],
)

# Calculator example using ASIO socket transport
cc_binary(
    name = "socket_client",
    srcs = ["calculator_example/socket/client.cpp"],
    deps = ["//:jsonrpc"],
)

cc_binary(
    name = "socket_server",
    srcs = [
        "calculator_example/calculator.hpp",
        "calculator_example/socket/server.cpp",
    ],
    deps = ["//:jsonrpc"],
)

# LSP example using Unix domain socket (pipe) transport
cc_binary(
    name = "pipe_lsp_server",
    srcs = [
        "lsp_example/server/lsp_server.cpp",
    ],
    deps = ["//:jsonrpc"],
)

# Typed calculator example
cc_binary(
    name = "typed_calculator_client",
    srcs = [
        "typed_calculator_example/client.cpp",
        "typed_calculator_example/typed_calculator.hpp",
    ],
    deps = ["//:jsonrpc"],
)

cc_binary(
    name = "typed_calculator_server",
    srcs = [
        "typed_calculator_example/server.cpp",
        "typed_calculator_example/typed_calculator.hpp",
    ],
    deps = ["//:jsonrpc"],
)
