cc_library(
    name = "jsonrpc_lib",
    srcs = glob(["**/*.cpp"]),
    hdrs = ["//include:jsonrpc_headers"],
    includes = ["../include"],
    linkopts = ["-pthread"],
    visibility = ["//visibility:public"],
    deps = [
        "@asio",
        "@nlohmann_json//:json",
        "@spdlog",
    ],
)
