# tests/BUILD

# Mock transport library
cc_library(
    name = "mock_transport",
    hdrs = ["common/mock_transport.hpp"],
    deps = [
        "//src:jsonrpc_lib",
    ],
)

# Client
cc_test(
    name = "test_client",
    size = "small",
    srcs = [
        "client/test_client.cpp",
        "common/mock_transport.hpp",
    ],
    defines = ["TESTING"],
    deps = [
        "//src:jsonrpc_lib",
        "//tests:mock_transport",
        "@catch2//:catch2_main",
    ],
)

# Server
cc_test(
    name = "test_server",
    size = "small",
    srcs = [
        "common/mock_transport.hpp",
        "server/test_server.cpp",
    ],
    deps = [
        "//src:jsonrpc_lib",
        "@catch2//:catch2_main",
    ],
)

cc_test(
    name = "test_dispatcher",
    size = "small",
    srcs = ["server/test_dispatcher.cpp"],
    deps = [
        "//src:jsonrpc_lib",
        "@catch2//:catch2_main",
    ],
)

cc_test(
    name = "test_request",
    size = "small",
    srcs = ["server/test_request.cpp"],
    deps = [
        "//src:jsonrpc_lib",
        "@catch2//:catch2_main",
    ],
)

cc_test(
    name = "test_response",
    size = "small",
    srcs = ["server/test_response.cpp"],
    deps = [
        "//src:jsonrpc_lib",
        "@catch2//:catch2_main",
    ],
)

# Transport
cc_test(
    name = "test_stdio_transport",
    size = "small",
    srcs = [
        "common/test_utils.hpp",
        "transports/test_stdio_transport.cpp",
    ],
    deps = [
        "//src:jsonrpc_lib",
        "@catch2//:catch2_main",
    ],
)

cc_test(
    name = "test_framed_transport",
    size = "small",
    srcs = ["transports/test_framed_transport.cpp"],
    deps = [
        "//src:jsonrpc_lib",
        "@catch2//:catch2_main",
    ],
)

cc_test(
    name = "test_pipe_transport",
    size = "small",
    srcs = ["transports/test_pipe_transport.cpp"],
    deps = [
        "//src:jsonrpc_lib",
        "@catch2//:catch2_main",
    ],
)

cc_test(
    name = "test_socket_transport",
    size = "small",
    srcs = ["transports/test_socket_transport.cpp"],
    deps = [
        "//src:jsonrpc_lib",
        "@catch2//:catch2_main",
    ],
)
