# tests/BUILD

# Mock transport library
cc_library(
    name = "mock_transport",
    hdrs = ["common/mock_transport.hpp"],
    deps = [
        "//:jsonrpc",
    ],
)

# Endpoint tests
cc_test(
    name = "test_endpoint",
    size = "small",
    srcs = [
        "common/mock_transport.hpp",
        "endpoint/test_endpoint.cpp",
    ],
    deps = [
        "//:jsonrpc",
        "//tests:mock_transport",
        "@catch2//:catch2_main",
    ],
)

cc_test(
    name = "test_dispatcher",
    size = "small",
    srcs = ["endpoint/test_dispatcher.cpp"],
    deps = [
        "//:jsonrpc",
        "@catch2//:catch2_main",
    ],
)

cc_test(
    name = "test_request",
    size = "small",
    srcs = ["endpoint/test_request.cpp"],
    deps = [
        "//:jsonrpc",
        "@catch2//:catch2_main",
    ],
)

cc_test(
    name = "test_response",
    size = "small",
    srcs = ["endpoint/test_response.cpp"],
    deps = [
        "//:jsonrpc",
        "@catch2//:catch2_main",
    ],
)

# Transport
cc_test(
    name = "test_framed_transport",
    size = "small",
    srcs = ["transports/test_framed_transport.cpp"],
    deps = [
        "//:jsonrpc",
        "@catch2//:catch2_main",
    ],
)

cc_test(
    name = "test_pipe_transport",
    size = "small",
    srcs = ["transports/test_pipe_transport.cpp"],
    deps = [
        "//:jsonrpc",
        "@catch2//:catch2_main",
    ],
)
