# tests/BUILD

# Mock transport library
cc_library(
    name = "mock_transport",
    hdrs = ["common/mock_transport.hpp"],
    deps = [
        "//:jsonrpc",
    ],
)

# Endpoint tests
cc_test(
    name = "endpoint_test",
    size = "small",
    srcs = [
        "common/mock_transport.hpp",
        "endpoint/endpoint_test.cpp",
    ],
    deps = [
        "//:jsonrpc",
        "//tests:mock_transport",
        "@catch2//:catch2_main",
    ],
)

cc_test(
    name = "dispatcher_test",
    size = "small",
    srcs = ["endpoint/dispatcher_test.cpp"],
    deps = [
        "//:jsonrpc",
        "@catch2//:catch2_main",
    ],
)

cc_test(
    name = "request_test",
    size = "small",
    srcs = ["endpoint/request_test.cpp"],
    deps = [
        "//:jsonrpc",
        "@catch2//:catch2_main",
    ],
)

cc_test(
    name = "response_test",
    size = "small",
    srcs = ["endpoint/response_test.cpp"],
    deps = [
        "//:jsonrpc",
        "@catch2//:catch2_main",
    ],
)

# Transport
cc_test(
    name = "message_framer_test",
    size = "small",
    srcs = ["transports/message_framer_test.cpp"],
    deps = [
        "//:jsonrpc",
        "@catch2//:catch2_main",
    ],
)

cc_test(
    name = "pipe_transport_test",
    size = "small",
    srcs = ["transports/pipe_transport_test.cpp"],
    deps = [
        "//:jsonrpc",
        "@catch2//:catch2_main",
    ],
)

cc_test(
    name = "framed_pipe_transport_test",
    size = "small",
    srcs = ["transports/framed_pipe_transport_test.cpp"],
    deps = [
        "//:jsonrpc",
        "@catch2//:catch2_main",
    ],
)
